# ChangeLog for net-im/psi-stopspam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-stopspam-0.4.4_pre3087.ebuild:
  version bump

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  create ChangeLog
