@@ -1,5 +1,7 @@
 DIST psi-stopspam-0.4.4_pre3087.tar.xz 19872 RMD160 ba96e41fc6ba38956afcf05d081cfb50442140c2 SHA1 50883d0003e21674cdb5e88d81ff9b76198cdaad SHA256 d5049ee702e0bdcd48d22f57721f0ddc2df322c2c44a22c40257de9c7c18b358
+DIST psi-stopspam-0.4.5_pre3195.tar.xz 19892 RMD160 319ac1cf56424497ca3fbcbcfad8665905728bcf SHA1 42be317a1ff1a919c9af7bd9ce00f9eabfb530d8 SHA256 b2daaa8024a9489d09fd09aa8cedd4c547e20bc0a8771fd6a1d29fc73dc7a1e4
 EBUILD psi-stopspam-0.4.4_pre3087.ebuild 228 RMD160 3ca61bbee068cecdea2f71b9b30835825f5c6aa7 SHA1 1c8affbe30d95d030ee631273271c012cc5178c2 SHA256 a99b4c9de0796c1df4028f08bcbb62966a6e7fbb8ce5faac88297cd38bf5f9c2
+EBUILD psi-stopspam-0.4.5_pre3195.ebuild 228 RMD160 3ca61bbee068cecdea2f71b9b30835825f5c6aa7 SHA1 1c8affbe30d95d030ee631273271c012cc5178c2 SHA256 a99b4c9de0796c1df4028f08bcbb62966a6e7fbb8ce5faac88297cd38bf5f9c2
 EBUILD psi-stopspam-9999.ebuild 219 RMD160 6f797ed061814a6c37bb7c2c85ad90d30f6474da SHA1 5569cc2ce5510b1e3c624db3fa4afde38d1c790a SHA256 585f9cc42b84e5e9256fce10b5f17c5f0d36cfe701eee81f3b7b683e6ec73bd4
-MISC ChangeLog 301 RMD160 67813e8b53ce60be66e707a4ce63ab2315377062 SHA1 f8d4f5e62db5a67de1380e04dc2f679ec0707c26 SHA256 a5a9c0d4552907ef2174602a4b2c4e5ed34ef8513d98eaf6f2f21cea091dabd6
+MISC ChangeLog 398 RMD160 69ee2cb86216b14c71902d63abbfbcd4a2c62124 SHA1 22116ea34277391cb0d282e9a19bb3b45ff3c79c SHA256 797ce655ed99932751d6051061c4f4c4933a6867afb3c24c1e1dfb2dff50ccf9
 MISC metadata.xml 409 RMD160 fe35f001edfa29426a1e24b47fd7251d4272a232 SHA1 bdb79973bff0aecbf606859aed30869220277ba1 SHA256 c8814f49cab5d2e90c3bfbfe8392c9d57e2aeb9bcb80ab2c459a206df7edf9c6
