@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Nov 2010; Nikoli <nikoli@lavabit.com>
+  +psi-stopspam-0.4.5_pre3195.ebuild:
+  version bump
+
   21 Oct 2010; Nikoli <nikoli@lavabit.com>
   +psi-stopspam-0.4.4_pre3087.ebuild:
   version bump
